tests/ui/lang/core/ref/zst_member_ref_arg-broken.stderr
error: cannot offset a pointer to an arbitrary element
  --> $DIR/zst_member_ref_arg-broken.rs:23:7
   |
23 |     f(&s.y);
   |       ^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:23:7
   |
23 |     f(&s.y);
   |       ^^^^
note: called by `main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:22:8
   |
22 | pub fn main_scalar(#[spirv(push_constant)] s: &S<usize>) {
   |        ^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u32`
         to `*u8`
  --> $DIR/zst_member_ref_arg-broken.rs:23:7
   |
23 |     f(&s.y);
   |       ^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:23:7
   |
23 |     f(&s.y);
   |       ^^^^
note: called by `main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:22:8
   |
22 | pub fn main_scalar(#[spirv(push_constant)] s: &S<usize>) {
   |        ^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u8`
         to `*struct B {  }`
  --> $DIR/zst_member_ref_arg-broken.rs:23:5
   |
23 |     f(&s.y);
   |     ^^^^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:23:5
   |
23 |     f(&s.y);
   |     ^^^^^^^
note: called by `main_scalar`
  --> $DIR/zst_member_ref_arg-broken.rs:22:8
   |
22 | pub fn main_scalar(#[spirv(push_constant)] s: &S<usize>) {
   |        ^^^^^^^^^^^

error: cannot offset a pointer to an arbitrary element
  --> $DIR/zst_member_ref_arg-broken.rs:28:7
   |
28 |     f(&s.y);
   |       ^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:28:7
   |
28 |     f(&s.y);
   |       ^^^^
note: called by `main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:27:8
   |
27 | pub fn main_scalar_pair(#[spirv(push_constant)] s: &S<usize, usize>) {
   |        ^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*struct S<usize, usize> { u32, u32 }`
         to `*u8`
  --> $DIR/zst_member_ref_arg-broken.rs:28:7
   |
28 |     f(&s.y);
   |       ^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:28:7
   |
28 |     f(&s.y);
   |       ^^^^
note: called by `main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:27:8
   |
27 | pub fn main_scalar_pair(#[spirv(push_constant)] s: &S<usize, usize>) {
   |        ^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u8`
         to `*struct B {  }`
  --> $DIR/zst_member_ref_arg-broken.rs:28:5
   |
28 |     f(&s.y);
   |     ^^^^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:28:5
   |
28 |     f(&s.y);
   |     ^^^^^^^
note: called by `main_scalar_pair`
  --> $DIR/zst_member_ref_arg-broken.rs:27:8
   |
27 | pub fn main_scalar_pair(#[spirv(push_constant)] s: &S<usize, usize>) {
   |        ^^^^^^^^^^^^^^^^

error: cannot offset a pointer to an arbitrary element
  --> $DIR/zst_member_ref_arg-broken.rs:33:7
   |
33 |     f(&s.y);
   |       ^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:33:7
   |
33 |     f(&s.y);
   |       ^^^^
note: called by `main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:32:8
   |
32 | pub fn main_scalar_scalar_pair_nested(#[spirv(push_constant)] s: &S<(usize, usize)>) {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*struct (usize, usize) { u32, u32 }`
         to `*u8`
  --> $DIR/zst_member_ref_arg-broken.rs:33:7
   |
33 |     f(&s.y);
   |       ^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:33:7
   |
33 |     f(&s.y);
   |       ^^^^
note: called by `main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:32:8
   |
32 | pub fn main_scalar_scalar_pair_nested(#[spirv(push_constant)] s: &S<(usize, usize)>) {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot cast between pointer types
       from `*u8`
         to `*struct B {  }`
  --> $DIR/zst_member_ref_arg-broken.rs:33:5
   |
33 |     f(&s.y);
   |     ^^^^^^^
   |
note: used from within `zst_member_ref_arg_broken::main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:33:5
   |
33 |     f(&s.y);
   |     ^^^^^^^
note: called by `main_scalar_scalar_pair_nested`
  --> $DIR/zst_member_ref_arg-broken.rs:32:8
   |
32 | pub fn main_scalar_scalar_pair_nested(#[spirv(push_constant)] s: &S<(usize, usize)>) {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

